# invenio-subjects-lcsh

./: .gitignore  README.md  pyproject.toml  setup.cfg  tasks.py
.github/: dependabot.yml
.github/workflows/: pypi-publish.yml  tests.yml
invenio_subjects_lcsh/: __init__.py  version.py  writer.py
tests/: test_invenio_subjects_lcsh.py  test_main.py
