# -*- coding: utf-8 -*-
#
# Copyright (C) 2021-2022 Northwestern University.
#
# invenio-subjects-lcsh is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.


[metadata]
version = attr: invenio_subjects_lcsh.__version__

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[pycodestyle]
exclude = docs/conf.py

# [options.entry_points]
# console_scripts =
#     invenio-subjects-lcsh = invenio_subjects_lcsh.cli:main

[check-manifest]
ignore =
    .*-requirements.txt
    *.bin
    pyproject.toml
